--- a/static/index.html
+++ b/static/index.html
@@ -1,65 +1,69 @@
 <html>
-    <head>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script src="fix.js"></script>
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="fix.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+</head>
 
-        <link rel="stylesheet" href="style.css">
+<body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+<!--        header -->
+<div class="jumbotron text-center jumbotron-custom">
+    <h1>
+        Welcome to the Location Checker
+    </h1>
+</div>
+<!--       body  -->
 
-
-
-
-
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    </head>
-
-    <body>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        <div class="jumbotron text-center">
-            <h1>
-                Welcome to the Location Checker
-            </h1>
+<div class="fileArea">
+    <!-- <form action="http:192.168.12.253:5000/GetVideoPath/" method="post"> -->
+    <div>
+        <p>Please upload your video</p>
+        <div class="fileAreaButton">
+            <input type="file" name="filepath" id="filePath" accecpt="video/*">
+            <input type="submit" value="Upload" onclick="upload_video()">
         </div>
-        <div>
-            <!-- <form action="http:192.168.12.253:5000/GetVideoPath/" method="post"> -->
-                <div>
-                    <p>Please upload your video:</p>
-                    <input type="file" name="filepath" id="filePath" accecpt="video/*">
-                    <input type="submit" value="Upload" onclick="upload_video()">
-                </div>
-            <!-- </form> -->
-        </div>
-        <script>
-            function Framerate(){
-                // var useroptions = document.getElementById("framerate");
-                // var selectedvalue = useroptions[useroptions.selectedIndex].value;
+    </div>
+    <!-- </form> -->
+</div>
+<script>
+    function Framerate() {
+        // var useroptions = document.getElementById("framerate");
+        // var selectedvalue = useroptions[useroptions.selectedIndex].value;
 
-                // if(selectedvalue == "short"){
-                //     var videolength = "short";
-                // } else if(selectedvalue == "long"){
-                //     var videolength = "long";
-                // }
-            }
-        </script>
-        <div id="loader" class = "container"></div>
-        <div id="googleMap" style="width:1000px;height:500px;" class = "container"></div>
-        <table class="Legend align-items-center">
-            <tr>
-                <th class="col-sm-6">Marker</th>
-                <th class="col-sm-6">Location</th>
-            </tr>
+        // if(selectedvalue == "short"){
+        //     var videolength = "short";
+        // } else if(selectedvalue == "long"){
+        //     var videolength = "long";
+        // }
+    }
+</script>
+<!--<div id="loader" class = "container"></div>-->
+<div class="findArea">
+    <button class="findLocationButton" onclick="Framerate(); getresult();" style="margin-right: 10px;">Find Locations</button>
+    <div id="redoContainer">
+        <div id="result"></div>
+        <button class="refreshButton" id="redo" onclick="Framerate(); getresult();">Redo with a different framerate
+        </button>
+    </div>
+</div>
+<div id="googleMap" style="width:1000px;height:500px;" class="container"></div>
+<table class="Legend align-items-center" style="margin: 0 auto">
+    <tr>
+        <th class="col-sm-6">Marker</th>
+        <th class="col-sm-6">Location</th>
+    </tr>
 
-            <tbody id="table_content">
+    <tbody id="table_content">
 
-            </tbody>
-        </table>
-        <button class="findLocationButton" onclick="Framerate(); getresult();">Find Locations</button>
-        
-        <div id="redoContainer">
-            <div id = "result"></div> <button class="refreshButton" id="redo" onclick="Framerate(); getresult();">Redo with a different framerate</button>
-        </div>
-       
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKVsr5DRS9ZPhpHaJ3I-8YJR8VyZTDmXU&callback=myMap"></script>
-    </body>
+    </tbody>
+</table>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKVsr5DRS9ZPhpHaJ3I-8YJR8VyZTDmXU&callback=myMap"></script>
+</body>
 </html>
